# rrwm

./: .gitignore  Cargo.toml  a.diff  record.md
.github/: README.md  README_CN.md
example/: rrwm.desktop  rrwm.toml  waybar_example_config.jsonc
src/: a.diff  config.rs  main.rs  protocol.rs
src/wm/: actions.rs  animation.rs  binds.rs  layout.rs  mod.rs
