[package]
name = "rrwm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Wayland 客户端核心库
wayland-client = "0.31"
# 用于把 XML 变成 Rust 代码的宏工具
wayland-scanner = "0.31"
bitflags = "2.4"
wayland-backend = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xkbcommon = { version = "0.7", features = ["wayland"] }
tempfile = "3.8"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# log = "0.4"
# env_logger = "0.11"
libc = "0.2.180"
