[package]
name = "rrwm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Wayland 客户端核心库
wayland-client = "0.31"
# 用于把 XML 变成 Rust 代码的宏工具
wayland-scanner = "0.31"
bitflags = "2.4"
wayland-backend = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xkbcommon = { version = "0.7", features = ["wayland"] }
tempfile = "3.8"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2.180"
regex-lite = "0.1.9"

[profile.release]
opt-level = "z"      # 告诉编译器：放弃一切速度优化，只追求最小体积
lto = true           # 开启全局链接优化，删除所有没用到的代码死角
codegen-units = 1    # 牺牲编译速度，换取更彻底的优化
panic = "abort"      # 发生崩溃时直接退出，不生成冗长的错误堆栈信息
strip = true         # 自动剥离符号表（不再需要手动执行 strip 命令）
